k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
spec:
  selector:
    app: welcome-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
  type: LoadBalancer
